--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -4,9 +4,10 @@
 }
 
 
-input{
+.input_form{
 	width: 35px;
 	height: 35px;
+
   }
 
   	.col_form{
@@ -22,6 +23,7 @@ input{
 	padding:20px 20px;
 	word-break:normal;
 	border-spacing: 50px 0;
+
 	}
   .col_pat{
     text-align:center;
@@ -42,14 +44,14 @@ input{
   }
 
 	.scale{
-    
+
 	  background-color: rgb(255, 255, 255);
 		border-collapse: collapse;
 		border-bottom: 5px solid rgb(0, 0, 0);
 		vertical-align:bottom;
 		padding:5px 10px;
 		font-weight:bolder;
-		
+
 
 
 	}
@@ -149,7 +151,7 @@ form .btn {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  
+
 }
 
 
